# werliestmit

./: CNAME  Dockerfile  README.md  data.json  datenschutz.html  gemeinden.topojson  impressum.html  index.html  nginx.conf  pyproject.toml  validation_report.csv  validation_report.json
.github/workflows/: nightly.yml
src/mail_sovereignty/: classify.py  cli.py  constants.py  dns.py  postprocess.py  preprocess.py  smtp.py  validate.py
tests/: conftest.py  test_classify.py  test_cli.py  test_constants.py  test_postprocess.py  test_preprocess.py  test_smtp.py  test_validate.py
